--- a/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
+++ b/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
@@ -10,6 +10,7 @@
 
 @section AddToScripts{
     <script src="@Url.Content("~/Scripts/CheckOut3Payment.js")"></script>
+    <script src="@Url.Content("~/Scripts/CheckOut2.js")"></script>
 }
 
 <section class="checkout_introduction">
