--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -715,12 +715,12 @@ img.HistoricRouteInfo9 {
 }
 
 .jazz_page_program_days {
-    border-width: 1px;
-    border-top-style:solid;
+    border-width: 2px;
+    border-top-style: solid;
     border-bottom-style: solid;
     margin-top: 2%;
     padding: 15px 0;
-    border-color: black;
+    border-color: #F8473E;
 }
 
 .jazz_page_program_days_header {
@@ -802,9 +802,18 @@ img.HistoricRouteInfo9 {
     padding-left : 30px;
 }
 
-.jazz_activity_btns{
-    padding-left : 50px;
-    padding-top : 10px;
+.jazz_activity_btns {
+    padding-left: 50px;
+    padding-top: 10px;
+    border-right-style: solid;
+    border-right-color: #F8473E;
+    border-right-width: 2px;
+}
+
+.jazz_activity_extra {
+    border-left-style: solid;
+    border-left-color: #F8473E;
+    border-left-width: 2px;
 }
 /* The Modal (background) */
 .modal {
@@ -827,7 +836,7 @@ img.HistoricRouteInfo9 {
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 25%;
+    width: 22%;
 }
 
 /* The Close Button */
@@ -905,7 +914,7 @@ img.HistoricRouteInfo9 {
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 20%;
+    width: 27%;
 }
 
 /* The Close Button */
@@ -924,6 +933,7 @@ img.HistoricRouteInfo9 {
 
 .jazz_btn_passpartout{
     width : 350px;
+    margin-left : 17%;
 }
 
 /* The Modal (background) */
@@ -1083,5 +1093,6 @@ img.HistoricRouteInfo9 {
 
 .jazz_page_header_text{
     font-weight : 600;
+    text-align : center;
 }
 
