--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -91,7 +91,7 @@
 
 <section class="row">
     <section class="col-md-12 sugestionview">
-        <h5>AANPASSEN</h5>
+        <h5>Other activities that you might like</h5>
     </section>
 </section>
 
