--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -40,7 +40,7 @@
                 <label>Would you like to register?</label>
 
 
-            <section id="Password" class="LinkerColom">
+            <section id="Password1" class="LinkerColom">
                 <p class="CheckOut2Label">Password : <label class="Verplicht">*</label></p>
                 @Html.TextBoxFor(model => model.Orders[0].Customer.Password, new { @class = "CheckOut2TBox", @required = "required", id = "PasswordBox" })
                 @*<input type="text" value="@Model.Orders[0].Customer.Password" />*@
